# example-project

./: .dockerignore  .gitmodules  Makefile  README.md
.github/workflows/: build.yml
alpine/common/: base.container.cfg  build.mk  rootfs.container.cfg
alpine/common/apps/: .dockerignore  Dockerfile
alpine/common/base/: Dockerfile
alpine/common/linux/: filesystems.kconfig
alpine/common/rootfs/: Dockerfile
alpine/orangepi-one/: build.mk  linux.git.cfg  rootfs.container.cfg  u-boot.cfg  u-boot.git.cfg
alpine/orangepi-one/disk/: bootenv.fat.cfg
alpine/orangepi-one/rootfs/: Dockerfile
alpine/orangepi-one/u-boot/: 0001-fs-squashfs-Only-use-export-table-if-available.patch
alpine/rpi/: NOTES.md  build.mk  linux.git.cfg  linux.kconfig  rootfs.container.cfg  u-boot.cfg  u-boot.git.cfg
alpine/rpi/disk/: boot.container.cfg
alpine/rpi/rootfs/: Dockerfile
alpine/x64/: build.mk  linux.cfg  rootfs.container.cfg
alpine/x64/disk/: bios.fat.cfg  bootenv.container.cfg  efi.fat.cfg  (+1 more)
common/alpine/: base.container.cfg  build.mk
common/alpine/apps/helloworld_cmake/: CMakeLists.txt  helloworld.c
common/u-boot/: filesystems.kconfig
platform/bplay/: bb.org_defconfig-6.12.17-ti-arm64-r33.kconfig  build.mk  linux.cfg  linux.git.cfg  rootfs.container.cfg  rootfs.sqfs.cfg
platform/opi1/: build.mk  linux.cfg  rootfs.container.cfg  rootfs.sqfs.pad.cfg  u-boot.cfg
platform/rpi/: build.mk  firmware.download.cfg  linux.cfg  rootfs.container.cfg  u-boot.kconfig
platform/x64/: build.mk  rootfs.container.cfg  rootfs.sqfs.cfg
workspace/: Dockerfile
(+53 files in other folders)
